--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,1 +1,31 @@
+name: Lint test
 
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install dependencies
+        run: |
+          pip install poetry
+          poetry install
+
+      - name: Lint with black
+        run: |
+          black . --check
+      
+      # Add coverage report, django testing
